--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,12 @@
     <title>Este es un blog post</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
+        <h1>Este es el título atractivo e interesante del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+    </div>
 </body>
 </html>
